; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_bf.c_getid.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_bf.c_getid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"[]<>+-,.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8)* @getid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @getid(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8 %0, i8* %2, align 1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = load i8, i8* %2, align 1
  %7 = call i8* @strchr(i8* %5, i8 signext %6)
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load i8*, i8** %4, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = ptrtoint i8* %11 to i64
  %14 = ptrtoint i8* %12 to i64
  %15 = sub i64 %13, %14
  %16 = add nsw i64 %15, 1
  br label %18

17:                                               ; preds = %1
  br label %18

18:                                               ; preds = %17, %10
  %19 = phi i64 [ %16, %10 ], [ 0, %17 ]
  %20 = trunc i64 %19 to i32
  ret i32 %20
}

declare dso_local i8* @strchr(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
